# go/model_modify_subscription_request.go
@@ -1,30 +1,0 @@
-/*
- * Ncdaf_EventExposure
- *
- * CDAF Event Exposure Service.   © 2023, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC).   All rights reserved. 
- *
- * API version: 1.2.3
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type ModifySubscriptionRequest struct {
-}
-
-// AssertModifySubscriptionRequestRequired checks if the required fields are not zero-ed
-func AssertModifySubscriptionRequestRequired(obj ModifySubscriptionRequest) error {
-	return nil
-}
-
-// AssertRecurseModifySubscriptionRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of ModifySubscriptionRequest (e.g. [][]ModifySubscriptionRequest), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseModifySubscriptionRequestRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aModifySubscriptionRequest, ok := obj.(ModifySubscriptionRequest)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertModifySubscriptionRequestRequired(aModifySubscriptionRequest)
-	})
-}
